# job_auto

./: .envtemplate  .gitignore  .gitlab-ci.yml  Pipfile  README.md  app.py  docker-composer.yml  pyproject.toml  setup.py
.deployment/: Dockerfile
.deployment/k8s/: configmap.yaml.j2  deployment.yaml.j2  secrets.yaml.j2  service.yaml.j2
notebooks/deprecated/: bert_huggingface_test.ipynb  chatgpt_jp_summarize.ipynb  chatgpt_test.ipynb  classify_jobdescr_birch_perword.ipynb  classify_jobdescr_kmeans_simple_avg.ipynb  database.ipynb  dollygpt_test.ipynb  gpt4all_chatgpt_compare.ipynb  gpt4all_test.ipynb  gpt_test.ipynb  ingest_google_qual.ipynb  ingest_skill2vec50k_word2vec.ipynb  inngest_qualifications_small.ipynb  postgres_connection_test.ipynb  qdrant_test.ipynb  tr_p_b.ipynb  train_word2vec_fasttext_visualize.ipynb
src/: application_questions_config.yaml  application_questions_pipeline.py  job_postings_config.yaml  job_postings_pipeline.py  test_flask_api.py  universal_config.yaml
src/exceptions/: database_exceptions.py
src/ingestion/: database.py  jp_ingestion.py
src/modeling_clusterization/: embedding.py  gpt_models.py
src/preprocessing/: spacy_prep.py
src/sessions/: application_session.py
src/utils/: logging_utils.py  yaml_tools.py
